fix for webkit rendering bug (span wrapped in anchor does not respect "text-decoration:none" so follow button text was always underlined in chrome/safari)

--- a/static/css/logged_in.css
+++ b/static/css/logged_in.css
@@ -25,10 +25,6 @@
     padding-bottom: 10px;
 }
 
-.suggested-followee-item a{
-    color:#86cfec;
-}
-
 .suggested-followees.profile-link-container{
     position:absolute;
     width:160px;
@@ -53,13 +49,10 @@
     font-size:13px;
     font-weight: 800;
     text-align:center;
-    padding-top:6px;
+    padding-top:7px;
 }
 
 .follow-button:hover{
+    text-decoration: none;
     background-color: #4ab7e3;
-}
-
-.follow-button-link{
-    text-decoration:none;
 }
